# whereami2cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
source/: whereami2cpp.cpp  whereami2cpp.h
